--- a/_posts/2017-08-06-AlpacaVM.md
+++ b/_posts/2017-08-06-AlpacaVM.md
@@ -1,17 +1,20 @@
 ---
-title: AlpacaVM
+title: AlpacaVM - 一个基于堆栈操作的语言的虚拟机实现
 date: 2017-08-06 15:30:09
+description: 草泥马语是一门基于堆栈操作，语法生动丰富，内容健康活泼，老少皆宜，人人适用的编程语言。这篇文章探讨了她的实现。
 categories:
 - 闲谈
 ---
+
+## 语言介绍
 
 >草泥马语是 [Noodles@SegmentFault](https://segmentfault.com/u/noodles001) 的发明。移步[编程语言中的精品——草泥马语](https://segmentfault.com/a/1190000000606169)来查看该语言的完整介绍。
 
 草泥马语是马勒戈壁第一款拥有自主知识产权的，以马勒戈壁上顽强生存的草泥马们为主体的编程语言。草泥马语语法生动丰富，内容健康活泼，是一门老少皆宜，人人适用的编程语言。它的出现弥补了我戈壁在国际编程语言界中的一项空白。
  
-草泥马语是一个基于堆和栈的编程语言，该语言的最大特点在于：所有操作全由 “草”“泥”“马”“河蟹” 这 4 个命令完成，文件内的其他字符都作为注释而不参与程序执行。
+草泥马语是一个基于堆和栈的编程语言，该语言的最大特点在于：所有操作均由 “草”、“泥”、“马”及“河蟹” 这 4 个命令完成，文件内的其他字符都作为注释而不参与程序执行。
 
-这个草泥马语虚拟机的实现采用了先进的 JOT（Just Out of Time）编译引擎，并且运行于西艾鲁阿尔虚拟机中，运行速度大幅度降低同时，还使用了戈壁内外各种先进技术，使的草泥马语不十分可靠。
+这个草泥马语虚拟机的实现采用了先进的 JOT（Just Out of Time）编译引擎，并且运行于西艾鲁阿尔（CLR）虚拟机中，运行速度大幅度降低同时，还使用了戈壁内外各种先进技术，使的草泥马语不十分可靠。
 
 在 C# 环境下编译后，运行命令
 
@@ -19,11 +22,11 @@ categories:
 
 即可输出指定文件中所定义的草泥马语程序对应的结果。
 
-例如，运行以下文件内容
+例如，以下的输入
 
     草草草泥马 马草草草泥草草草草泥泥马 草马草 泥马草泥 草草草泥草泥草马 泥马草草 草草草泥马 泥草草草 草马草 草草草泥草泥泥马 泥草草泥 马泥草草泥草草草泥草泥马 马草马草泥草草草草泥泥马 马草草草泥草草草泥草泥马 草马马 马马马
     
-将会输出：
+将会产生输出：
 
     1
     2
